--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -631,3 +631,39 @@ series:
         url: https://www.meetup.com/GDGPrague/events/xqcsqsydcdbtb/
         dtstart: 2022-02-15 18:30:00+01:00
         dtend: 2022-02-15 20:30:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Mar 1, 6:30 PM CEST: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One | Meetup
+      url: https://www.meetup.com/GDGPrague/events/xqcsqsydcfbcb/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, March 1 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/GDGPrague/events/xqcsqsydcfbcb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydcfbcb@meetup.com
+        url: https://www.meetup.com/GDGPrague/events/xqcsqsydcfbcb/
+        dtstart: 2022-03-01 18:30:00+01:00
+        dtend: 2022-03-01 20:30:00+01:00
