data: cron update

--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -181,3 +181,24 @@ series:
         dtstart: 2022-04-06 19:00:00+02:00
         dtend: 2022-04-06 22:00:00+02:00
       image: https://secure.meetupstatic.com/photos/event/9/1/7/a/600_224137242.jpeg
+  - meetupcom:
+      meta_description: 'Wed, May 4, 7:00 PM CEST: '
+      og_title: First Wednesday Of The Month - Ruby | Meetup
+      url: https://www.meetup.com/Praguerb/events/dkmktfydchbgb/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, May 4 at 7:00 PM
+
+
+          https://www.meetup.com/Praguerb/events/dkmktfydchbgb/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfydchbgb@meetup.com
+        url: https://www.meetup.com/Praguerb/events/dkmktfydchbgb/
+        dtstart: 2022-05-04 19:00:00+02:00
+        dtend: 2022-05-04 22:00:00+02:00
