--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -508,3 +508,30 @@ series:
         url: https://www.meetup.com/Morning-Talks/events/283047391/
         dtstart: 2022-02-02 09:00:00+01:00
         dtend: 2022-02-02 10:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Feb 9, 9:00 AM CEST: Registrace na https://www.datascript.cz/morning-talks/cicd-end-to-end-reseni-pro-on-premise-aplikace/
+
+
+        Automatizace deploymentu aplikací je v sočasnosti jedna z nejpoptávan'
+      og_title: 'CI/CD: end-to-end řešení pro on premise aplikace | Meetup'
+      url: https://www.meetup.com/Morning-Talks/events/283047401/
+      ical:
+        summary: 'CI/CD: end-to-end řešení pro on premise aplikace'
+        description: 'Morning Talks
+
+          Wednesday, February 9 at 9:00 AM
+
+
+          Registrace na https://www.datascript.cz/morning-talks/cicd-end-to-end-reseni-pro-on-premise-aplikace/ Automatizace deploymentu aplikací je v sočasnost...
+
+
+          https://www.meetup.com/Morning-Talks/events/283047401/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283047401@meetup.com
+        url: https://www.meetup.com/Morning-Talks/events/283047401/
+        dtstart: 2022-02-09 09:00:00+01:00
+        dtend: 2022-02-09 10:00:00+01:00
