--- a/data/sources/protest-cz.yaml
+++ b/data/sources/protest-cz.yaml
@@ -166,3 +166,28 @@ series:
         url: https://www.meetup.com/protest_cz/events/282124529/
         dtstart: 2021-11-30 18:00:00+01:00
         dtend: 2021-11-30 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Jan 25, 6:00 PM CEST: Jednou možná přijde čas, kdy se i vaše QA oddělení stane úzkým hrdlem vývoje.
+
+        A jak z toho následně ven, obzvlášť v době, kdy najít dobrého testera na trhu práce je značně '
+      og_title: 105. [pro:]TEST! – Libor Šimo o teorii omezení | Meetup
+      url: https://www.meetup.com/protest_cz/events/283227886/
+      ical:
+        summary: 105. [pro:]TEST! – Libor Šimo o teorii omezení
+        description: '[pro:]TEST!
+
+          Tuesday, January 25 at 6:00 PM
+
+
+          Jednou možná přijde čas, kdy se i vaše QA oddělení stane úzkým hrdlem vývoje.A jak z toho následně ven, obzvlášť v době, kdy najít dobrého testera na ...\n
+
+          https://www.meetup.com/protest_cz/events/283227886/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283227886@meetup.com
+        url: https://www.meetup.com/protest_cz/events/283227886/
+        dtstart: 2022-01-25 18:00:00+01:00
+        dtend: 2022-01-25 19:00:00+01:00
