--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -325,3 +325,27 @@ series:
         url: https://www.meetup.com/czskppug/events/275722156/
         dtstart: 2021-12-09 17:00:00+01:00
         dtend: 2021-12-09 19:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, May 12, 5:00 PM CEST: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      url: https://www.meetup.com/czskppug/events/sgvgrsydchbqb/
+      ical:
+        summary: '[ONLINE] CZSK PPUG Setkání a povídání'
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, May 12 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/sgvgrsydchbqb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_sgvgrsydchbqb@meetup.com
+        url: https://www.meetup.com/czskppug/events/sgvgrsydchbqb/
+        dtstart: 2022-05-12 17:00:00+02:00
+        dtend: 2022-05-12 19:00:00+02:00
