--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -1,7 +1,7 @@
 series:
   meetupcom:
     url: https://www.meetup.com/praguejs/events/
-    meta_description: Upcoming events for PragueJS in Prague, Czech Republic. A Meetup group with over 1888 Members.
+    meta_description: Upcoming events for PragueJS in Prague, Czech Republic. A Meetup group with over 1890 Members.
     og_title: Upcoming events | PragueJS (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/e/8/f/c/600_455639644.jpeg
   events:
@@ -296,7 +296,7 @@ series:
         dtstart: 2021-12-07 18:30:00+01:00
         dtend: 2021-12-07 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Jan 25, 6:30 PM CEST: Get out and get social in 2022 : come out and discuss JS together!
+      meta_description: 'Tue, Jan 25, 6:15 PM CEST: Get out and get social in 2022 : come out and discuss JS together!
 
         Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that a'
       og_title: '2022 #1 Server Side JavaScript | Meetup'
@@ -352,22 +352,22 @@ series:
         summary: '2022 #1 Server Side JavaScript'
         description: 'PragueJS
 
-          Tuesday, January 25 at 6:30 PM
+          Tuesday, January 25 at 6:15 PM
 
 
           Get out and get social in 2022 : come out and discuss JS together!Get in touch with the organizers with any questions you have. We welcome a diverse r...
 
 
           https://www.meetup.com/praguejs/events/269001730/'
-        location: null
+        location: Pracovna & Laskafe (Vlkova 36, Praha 3-Žižkov, Czech Republic 130 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_269001730@meetup.com
         url: https://www.meetup.com/praguejs/events/269001730/
-        dtstart: 2022-01-25 18:30:00+01:00
-        dtend: 2022-01-25 20:30:00+01:00
+        dtstart: 2022-01-25 18:15:00+01:00
+        dtend: 2022-01-25 20:45:00+01:00
   - meetupcom:
       meta_description: 'Tue, Feb 22, 6:30 PM CEST: Get out and get social in 2022 : come out and discuss JS together!
 
