data: cron update

--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -189,7 +189,7 @@ series:
       meta_description: 'Wed, Jan 26, 6:30 PM CEST: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
 
 
-        📢 Program bude upřesněn.
+        📢 Program (anotace níže)
 
 
         – 18:30 Úvodní slovo a novinky ze světa Word'
@@ -203,7 +203,7 @@ series:
           Wednesday, January 26 at 6:30 PM
 
 
-          Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity. 📢 Program bude upřesněn. – 18:30 Úvodní slovo a no...
+          Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity. 📢 Program (anotace níže) – 18:30 Úvodní slovo a no...
 
 
           https://www.meetup.com/naswp-cz/events/282061091/'
