--- a/data/sources/hackprague.yaml
+++ b/data/sources/hackprague.yaml
@@ -1,8 +1,8 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/HackPrague/
-    meta_description: This group is for everyone who wants to see Technology topics from a broader and cross-disciplinary perspective. We cover various Tech topics like artificial intelligence and medicine, data science, s
-    og_title: HackPrague Hackers (Prague, Czech Republic)
+    url: https://www.meetup.com/login/
+    meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+    og_title: Login to Meetup | Meetup
     image: https://secure.meetupstatic.com/photos/event/7/8/5/2/600_486990802.jpeg
   events:
   - meetupcom:
